# PhiChat

./: .gitignore  CHANGELOG.md  INTEGRATION_GUIDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
PhiChat/: __init__.py  model.py  parsers.py  tools.py
PhiChat/constants/: __init__.py  constants.py
PhiChat/models/: __init__.py  phi_model.py
PhiChat/tools/: __init__.py  factory.py  loops.py
PhiChat/utils/: __init__.py  parsers.py
docs/: CHANGELOG.md  api_reference.md
skills/: SKILL.md  description.md
test/: test_basic_llm.py  test_mcp_mock.py  test_parsers.py  test_robustness.py  test_streaming_llm.py  test_structured.py  test_tools_llm.py
