[project]
name = "phichat"
version = "0.1.2"
description = "Wrapper de LangChain para Phi-4 con soporte nativo de Tool Calling y MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-ollama>=1.1.0",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters>=0.2.2",
    "mcp>=1.27.0",
    "pydantic>=2.0.0",
    "nest-asyncio>=1.6.0", 
]

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["PhiChat"]
